# bookstore

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/scss/: main.scss
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_book_name.py  0003_alter_book_name.py
books/templates/books/: book_detail.html  book_list.html
catalog/: urls.py  views.py
catalog/templates/catalog/: index.html
config/: settings.py  urls.py
static/css/: main.css
templates/: base.html
templates/registration/: login.html
