[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "caelykk",email = "caelykkaty.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
django-extensions = "^4.1"
pre-commit = "^4.3.0"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.10"



[tool.black]  # black — автоформаттер
line-length = 88  # рекомендуемая длина строки (по умолчанию 88)

[tool.isort]  # isort — сортировка импортов
profile = "black"  # совместимость с black
line_length = 88
known_first_party = ["catalog", "orders", "accounts", "core"]  # твои приложения
skip = ["migrations"]  # пропускать миграции

[tool.ruff]  # ruff — быстрый линтер и fixer
line-length = 88

